--- a/app/src/main/res/layout/fragment_exercise_selector.xml
+++ b/app/src/main/res/layout/fragment_exercise_selector.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.hardiksachan.fitbuddy.mainactivityfragments.exerciseselector.ExerciseSelectorViewModel" />
@@ -15,13 +16,39 @@
         android:orientation="vertical"
         tools:context=".mainactivityfragments.exerciseselector.ExerciseSelectorFragment">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="@dimen/spacing_small"
+                android:text="@string/categoryHeader"
+                android:textAppearance="?attr/textAppearanceSubtitle2" />
+
+            <HorizontalScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chipview_category_filter_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/spacing_normal" />
+            </HorizontalScrollView>
+
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_exercise_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:itemCount="6"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            />
+            tools:itemCount="6"
+            tools:listitem="@layout/list_item_exercise" />
 
     </LinearLayout>
 </layout>
