--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_size_medium">18sp</dimen>
-    <dimen name="margin_small">8dp</dimen>
+    <dimen name="spacing_small">8dp</dimen>
     <dimen name="border_small">1dp</dimen>
+    <dimen name="spacing_normal">16dp</dimen>
 </resources>
