--- a/app/src/main/res/layout/list_item_exercise.xml
+++ b/app/src/main/res/layout/list_item_exercise.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,9 +10,12 @@
             type="com.hardiksachan.fitbuddy.domain.Exercise" />
     </data>
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/stroke_color"
+        app:cardElevation="0dp"
         android:layout_margin="@dimen/spacing_small"
         android:padding="@dimen/spacing_small">
 
@@ -46,5 +50,5 @@
                 tools:text="Equipment: Bench, Gym mat" />
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
