--- a/app/src/main/res/layout/fragment_exercise_filter.xml
+++ b/app/src/main/res/layout/fragment_exercise_filter.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.hardiksachan.fitbuddy.mainactivityfragments.exerciseselector.exercisefilter.ExerciseFilterViewModel" />
@@ -13,25 +14,62 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".mainactivityfragments.exerciseselector.exercisefilter.ExerciseFilterFragment">
+            android:layout_height="match_parent">
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/cv_category_filter_list"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/spacing_normal" />
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_equipment_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/spacing_small"
+                    android:text="@string/equipment_header"
+                    android:textAppearance="?attr/textAppearanceHeadline4" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_equipment_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="175dp"
+                    android:clipToPadding="false"
+                    android:paddingHorizontal="@dimen/spacing_normal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:itemCount="10"
+                    tools:listitem="@layout/recyclerview_item_exercise_category_filter" />
+
+                <TextView
+                    android:id="@+id/tv_category_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/spacing_small"
+                    android:text="@string/categoryHeader"
+                    android:textAppearance="?attr/textAppearanceHeadline4" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_category_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="175dp"
+                    android:clipToPadding="false"
+                    android:paddingHorizontal="@dimen/spacing_normal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:itemCount="10"
+                    tools:listitem="@layout/recyclerview_item_exercise_category_filter" />
+
+
+            </LinearLayout>
+
+        </ScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            app:srcCompat="@drawable/ic_done_white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="@dimen/spacing_normal"
-            android:onClick="@{() -> viewModel.onDoneFabClicked()}" />
+            android:onClick="@{() -> viewModel.onDoneFabClicked()}"
+            app:srcCompat="@drawable/ic_done_white" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
