Added Primary and Secondary muscles to db

--- a/app/src/main/res/layout/fragment_exercise_selector.xml
+++ b/app/src/main/res/layout/fragment_exercise_selector.xml
@@ -43,7 +43,7 @@
                     android:layout_marginTop="@dimen/spacing_small"
                     android:layout_marginEnd="@dimen/spacing_small"
                     android:layout_marginBottom="@dimen/spacing_small"
-                    android:text="@string/num_active_filters"
+                    android:text="@string/num_active_filter_long"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/btn_clear_filters"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -59,7 +59,7 @@
                     android:layout_marginTop="@dimen/spacing_small"
                     android:layout_marginEnd="@dimen/spacing_normal"
                     android:layout_marginBottom="@dimen/spacing_small"
-                    android:text="Clear all"
+                    android:text="@string/clear_all"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
