--- a/app/src/main/res/layout/recylerview_item_card_filter_type.xml
+++ b/app/src/main/res/layout/recylerview_item_card_filter_type.xml
@@ -23,16 +23,15 @@
 
             <TextView
                 android:id="@+id/tv_equipment_header"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacing_normal"
+                android:layout_marginStart="@dimen/spacing_small"
                 android:gravity="center_vertical"
                 android:padding="@dimen/spacing_small"
                 android:text="@={heading}"
-                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textAppearance="?attr/textAppearanceListItem"
                 app:layout_constraintBaseline_toBaselineOf="@+id/chip_active_filters"
                 app:layout_constraintEnd_toStartOf="@+id/chip_active_filters"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="spread_inside"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="@string/categoryHeader" />
@@ -43,6 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:text="@string/num_active_filters"
+                android:textAppearance="?attr/textAppearanceCaption"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btn_clear_filters"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -55,11 +55,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/spacing_normal"
-                android:text="Clear all"
+                android:text="@string/clear_all"
                 app:layout_constraintBaseline_toBaselineOf="@+id/chip_active_filters"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/chip_active_filters" />
+                app:layout_constraintStart_toEndOf="@+id/chip_active_filters"
+                app:layout_goneMarginEnd="@dimen/spacing_small" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
