Improved Selection section of the app

--- a/app/src/main/res/layout/fragment_exercise_filter_by_what.xml
+++ b/app/src/main/res/layout/fragment_exercise_filter_by_what.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.hardiksachan.fitbuddy.mainactivityfragments.exerciseselector.exercisefilter.ExerciseFilterByWhatViewModel" />
+            type="com.hardiksachan.fitbuddy.exerciseselectionfragmentsactivity.exerciseselector.exercisefilter.ExerciseFilterByWhatViewModel" />
     </data>
 
 
