--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".mainactivityfragments.MainActivity">
+    tools:context=".exerciseselectionfragmentsactivity.MainActivity">
 
     <fragment
         android:id="@+id/my_nav_fragment"
