--- a/app/src/main/res/layout/fragment_exercise_detail.xml
+++ b/app/src/main/res/layout/fragment_exercise_detail.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".mainactivityfragments.exerciseinfo.ExerciseDetailFragment">
+        tools:context=".exerciseselectionfragmentsactivity.exerciseinfo.ExerciseDetailFragment">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager_exercise_detail"
