--- a/app/src/main/res/layout/fragment_exercise_filter_specific.xml
+++ b/app/src/main/res/layout/fragment_exercise_filter_specific.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.hardiksachan.fitbuddy.mainactivityfragments.exerciseselector.exercisefilter.ExerciseFilterSpecificViewModel" />
+            type="com.hardiksachan.fitbuddy.exerciseselectionfragmentsactivity.exerciseselector.exercisefilter.ExerciseFilterSpecificViewModel" />
     </data>
 
 
