--- a/app/src/main/res/layout/viewpager2_item_exercise_detail.xml
+++ b/app/src/main/res/layout/viewpager2_item_exercise_detail.xml
@@ -14,7 +14,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".mainactivityfragments.exerciseinfo.ExerciseDetailFragment">
+            tools:context=".exerciseselectionfragmentsactivity.exerciseinfo.ExerciseDetailFragment">
 
             <TextView
                 android:id="@+id/tv_name"
