--- a/app/src/main/res/layout/filter_chip.xml
+++ b/app/src/main/res/layout/filter_chip.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     style="@style/Widget.MaterialComponents.Chip.Filter"
-    android:layout_height="wrap_content">
+    android:backgroundTint="@color/chip_background_light_blue"
+    android:layout_height="wrap_content"
+    app:chipCornerRadius="@dimen/chip_radius_tiny">
+
+
 
 </com.google.android.material.chip.Chip>
