--- a/app/src/main/res/layout/viewpager2_item_exercise_detail.xml
+++ b/app/src/main/res/layout/viewpager2_item_exercise_detail.xml
@@ -17,13 +17,28 @@
             tools:context=".exerciseselectionfragmentsactivity.exerciseinfo.ExerciseDetailFragment">
 
             <TextView
+                android:id="@+id/tv_categoryHeadline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacing_extra_large"
+                android:text="@string/categoryHeader"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textStyle="bold"
+                app:layout_constraintBaseline_toBaselineOf="@+id/chip_category"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/spacing_large"
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="@dimen/spacing_large"
-                android:textAppearance="?attr/textAppearanceHeadline4"
+                android:fontFamily="@font/denk_one"
+                android:text="Sample Text"
+                android:textAppearance="?textAllCaps"
+                android:textStyle="bold"
+                style="@style/TextAppearance.MyApp.CustomHeadline4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -34,11 +49,13 @@
                 android:id="@+id/chip_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacing_extra_large"
+                android:layout_marginStart="@dimen/spacing_normal"
                 android:layout_marginTop="@dimen/spacing_normal"
+                app:chipCornerRadius="@dimen/chip_radius_tiny"
+                android:backgroundTint="@color/chip_background_light_blue"
                 android:text="Abs"
                 android:textAppearance="?attr/textAppearanceBody1"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tv_categoryHeadline"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -79,25 +96,39 @@
                 android:id="@+id/wv_description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textAppearance="?attr/textAppearanceBody1"
                 android:layout_marginStart="@dimen/spacing_normal"
                 android:layout_marginTop="@dimen/spacing_extra_large"
                 android:layout_marginEnd="@dimen/spacing_normal"
+                android:textAppearance="?attr/textAppearanceBody1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/chipGroup_equipments" />
+
+            <Button
+                android:id="@+id/btn_watch_tutorial"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacing_large"
+                android:layout_marginTop="@dimen/spacing_normal"
+                android:layout_marginEnd="@dimen/spacing_large"
+                android:text="@string/watch_tutorial"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/wv_description" />
 
             <TextView
                 android:id="@+id/tv_PrimaryMusclesHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/spacing_normal"
-                android:layout_marginTop="@dimen/spacing_extra_large"
+                android:layout_marginTop="@dimen/spacing_normal"
                 android:text="Primary Muscle Targets: "
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/wv_description" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_watch_tutorial" />
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/chipGroup_primary_muscles"
