--- a/app/src/main/res/layout/activity_first_run.xml
+++ b/app/src/main/res/layout/activity_first_run.xml
@@ -4,21 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".exerciseselectionfragmentsactivity.MainActivity">
+    tools:context=".firstRun.FirstRunActivity">
 
     <fragment
-        android:id="@+id/my_nav_fragment"
+        android:id="@+id/first_run_nav_fargment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/exercise_selection_nav_graph" />
-
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="main Activity"/>-->
+        app:navGraph="@navigation/first_run_nav_graph" />
 
 
 </LinearLayout>
