--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".dashboard.DashboardActivity">
 
+    <fragment
+        android:id="@+id/dashboard_nav_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/dashboard_nav_graph" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
