--- a/app/src/main/res/navigation/exercise_selection_nav_graph.xml
+++ b/app/src/main/res/navigation/exercise_selection_nav_graph.xml
@@ -45,6 +45,8 @@
         android:label="ExerciseDetailFragment" >
         <action
             android:id="@+id/action_exerciseDetailFragment_to_exerciseSelectorFragment"
-            app:destination="@id/exerciseSelectorFragment" />
+            app:destination="@id/exerciseSelectorFragment"
+            app:popUpTo="@id/exerciseSelectorFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
