--- a/app/src/main/res/layout/fragment_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_main_dashboard.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="user"
             type="com.hardiksachan.fitbuddy.domain.User" />
@@ -18,6 +19,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/dashboard_background"
             android:orientation="vertical"
+            android:paddingBottom="@dimen/spacing_extra_large"
             tools:context=".dashboard.MainDashboardFragment">
 
             <TextView
@@ -26,8 +28,8 @@
                 android:layout_margin="@dimen/spacing_normal"
                 android:padding="@dimen/spacing_extra_large"
                 android:text="Dashboard"
-                android:textAllCaps="true"
                 android:textAlignment="center"
+                android:textAllCaps="true"
                 android:textAppearance="?attr/textAppearanceHeadline4"
                 android:textColor="?attr/colorOnPrimary"
                 android:textStyle="bold" />
@@ -91,8 +93,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/spacing_extra_large">
+                android:orientation="horizontal">
 
 
                 <androidx.cardview.widget.CardView
@@ -140,10 +141,10 @@
                         <Button
                             android:id="@+id/btn_update_weight"
                             style="?attr/materialButtonOutlinedStyle"
-                            android:textColor="@color/secondaryColor"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/update" />
+                            android:text="@string/update"
+                            android:textColor="@color/secondaryColor" />
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -193,13 +194,57 @@
                         <Button
                             android:id="@+id/btn_update_height"
                             style="?attr/materialButtonOutlinedStyle"
-                            android:textColor="@color/secondaryColor"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/update" />
+                            android:text="@string/update"
+                            android:textColor="@color/secondaryColor" />
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_exercise"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/spacing_normal"
+                    android:layout_weight=".5"
+                    app:cardCornerRadius="@dimen/spacing_normal"
+                    app:cardElevation="@dimen/spacing_normal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="@dimen/spacing_normal">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingVertical="@dimen/spacing_small"
+                            android:text="@string/exercise"
+                            android:textAlignment="center"
+                            android:textAppearance="?attr/textAppearanceHeadline6" />
+
+                        <ImageView
+                            android:layout_width="96dp"
+                            android:layout_height="96dp"
+                            android:layout_gravity="center"
+                            app:srcCompat="@drawable/ic_fitness_center_white_18dp"
+                            app:tint="@android:color/black" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+
 
 
             </LinearLayout>
