--- a/app/src/main/res/layout/fragment_exercise_detail.xml
+++ b/app/src/main/res/layout/fragment_exercise_detail.xml
@@ -18,6 +18,8 @@
             android:layout_height="0dp"
             android:layout_weight=".9" />
 
+        <include layout="@layout/horizontal_divider" />
+
         <Button
             android:id="@+id/btn_add_exercise"
             style="?attr/materialButtonOutlinedStyle"
