Added Exercise Detail for Selected Exercise By Day

--- a/app/src/main/res/navigation/dashboard_nav_graph.xml
+++ b/app/src/main/res/navigation/dashboard_nav_graph.xml
@@ -14,5 +14,13 @@
     <fragment
         android:id="@+id/exerciseByDayFragment"
         android:name="com.hardiksachan.fitbuddy.dashboard.ExerciseByDayFragment"
-        android:label="ExerciseByDayFragment" />
+        android:label="ExerciseByDayFragment" >
+        <action
+            android:id="@+id/action_exerciseByDayFragment_to_selectedExerciseDetailFragment"
+            app:destination="@id/selectedExerciseDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/selectedExerciseDetailFragment"
+        android:name="com.hardiksachan.fitbuddy.dashboard.SelectedExerciseDetailFragment"
+        android:label="SelectedExerciseDetailFragment" />
 </navigation>
